i18n: add main and scenes translate behaviors

--- a/crates/choreo_i18n/assets/i18n/en.toml
+++ b/crates/choreo_i18n/assets/i18n/en.toml
@@ -50,6 +50,14 @@ SearchPlaceholder = "Search"
 SceneTimestampMinutesLabel = "min"
 SceneTimestampSecondsLabel = "s"
 SceneTimestampMillisecondsLabel = "ms"
+ScenesAddBefore = "Add before"
+ScenesAddAfter = "Add after"
+ScenesOpen = "Open"
+ScenesSave = "Save"
+MainToggleNavTooltip = "Toggle navigation"
+MainOpenSettingsTooltip = "Choreography settings"
+MainOpenFloorPlanTooltip = "Open floor plan"
+MainOpenAudioTooltip = "Open audio file"
 CommonCancel = "Cancel"
 CommonOk = "OK"
 DancerColorLabel = "Color"
