i18n: localize choreography settings date labels

--- a/crates/choreo_i18n/assets/i18n/en.toml
+++ b/crates/choreo_i18n/assets/i18n/en.toml
@@ -22,6 +22,8 @@ ChoreographySectionTitle = "Choreography"
 ChoreographyShowTimestampsLabel = "Show timestamps"
 ChoreographyShowLegendLabel = "Show legend"
 ChoreographySubtitlePlaceholder = "Subtitle"
+ChoreographyDateLabel = "Date"
+ChoreographyDatePickerTitle = "Date"
 ChoreographyTransparencyLabel = "Transparency"
 DeleteSceneDialogTitle = "Delete scene"
 DeleteSceneDialogMessage = "Delete scene \"{0}\"?"
