floor: complete rendering and behaviors

--- a/crates/choreo_i18n/assets/i18n/en.toml
+++ b/crates/choreo_i18n/assets/i18n/en.toml
@@ -13,6 +13,9 @@ ChoreographyFloorFrontLabel = "Front"
 ChoreographyFloorLeftLabel = "Left"
 ChoreographyFloorRightLabel = "Right"
 ChoreographyFloorTitle = "Floor"
+FloorPlacementTitle = "Placement mode"
+FloorPlacementHint = "Tap to place a position"
+FloorPlacementRemainingPrefix = "Remaining: "
 ChoreographyGridLinesLabel = "Grid lines"
 ChoreographySnapToGridLabel = "Snap to grid"
 ChoreographyGridSizeLabel = "Grid size"
