Localize MainOpenImageTooltip across all locales

--- a/crates/choreo_i18n/assets/i18n/ar.toml
+++ b/crates/choreo_i18n/assets/i18n/ar.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "الإعدادات"
+﻿SettingsTitle = "الإعدادات"
 DarkModeLabel = "الوضع الداكن"
 AppTitle = "عارض تصميم الرقصات"
 ChoreographyAuthorPlaceholder = "المؤلف"
@@ -88,3 +88,4 @@ ColorPurple = "بنفسجي"
 ColorRed = "أحمر"
 ColorTeal = "أخضر مزرق"
 ColorYellow = "أصفر"
+MainOpenImageTooltip = "فتح الأرضية SVG"
