--- a/crates/choreo_i18n/assets/i18n/az.toml
+++ b/crates/choreo_i18n/assets/i18n/az.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Ayarlar"
+﻿SettingsTitle = "Ayarlar"
 DarkModeLabel = "Tünd rejim"
 AppTitle = "Xoreoqrafiya görüntüləyicisi"
 ChoreographyAuthorPlaceholder = "Müəllif"
@@ -88,3 +88,4 @@ ColorPurple = "Bənövşəyi"
 ColorRed = "Qırmızı"
 ColorTeal = "Firuzəyi"
 ColorYellow = "Sarı"
+MainOpenImageTooltip = "Aç Döşəmə SVG"
