--- a/crates/choreo_i18n/assets/i18n/be.toml
+++ b/crates/choreo_i18n/assets/i18n/be.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Налады"
+﻿SettingsTitle = "Налады"
 DarkModeLabel = "Цёмны рэжым"
 AppTitle = "Праглядальнік харэаграфіі"
 ChoreographyAuthorPlaceholder = "Аўтар"
@@ -88,3 +88,4 @@ ColorPurple = "Фіялетавы"
 ColorRed = "Чырвоны"
 ColorTeal = "Бірюзовы"
 ColorYellow = "Жоўты"
+MainOpenImageTooltip = "Адкрыць Падлога SVG"
