--- a/crates/choreo_i18n/assets/i18n/bg.toml
+++ b/crates/choreo_i18n/assets/i18n/bg.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Настройки"
+﻿SettingsTitle = "Настройки"
 DarkModeLabel = "Тъмен режим"
 AppTitle = "Преглед на хореография"
 ChoreographyAuthorPlaceholder = "Автор"
@@ -88,3 +88,4 @@ ColorPurple = "Лилав"
 ColorRed = "Червен"
 ColorTeal = "Тюркоаз"
 ColorYellow = "Жълт"
+MainOpenImageTooltip = "Отвори Под SVG"
