--- a/crates/choreo_i18n/assets/i18n/bn.toml
+++ b/crates/choreo_i18n/assets/i18n/bn.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "সেটিংস"
+﻿SettingsTitle = "সেটিংস"
 DarkModeLabel = "ডার্ক মোড"
 AppTitle = "কোরিওগ্রাফি ভিউয়ার"
 ChoreographyAuthorPlaceholder = "লেখক"
@@ -88,3 +88,4 @@ ColorPurple = "বেগুনি"
 ColorRed = "লাল"
 ColorTeal = "টিল"
 ColorYellow = "হলুদ"
+MainOpenImageTooltip = "খুলুন মেঝে SVG"
