--- a/crates/choreo_i18n/assets/i18n/ca.toml
+++ b/crates/choreo_i18n/assets/i18n/ca.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Configuració"
+﻿SettingsTitle = "Configuració"
 DarkModeLabel = "Mode fosc"
 AppTitle = "Visor de coreografies"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Porpra"
 ColorRed = "Vermell"
 ColorTeal = "Verd turquesa"
 ColorYellow = "Groc"
+MainOpenImageTooltip = "Obre Terra SVG"
