--- a/crates/choreo_i18n/assets/i18n/cs.toml
+++ b/crates/choreo_i18n/assets/i18n/cs.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Nastavení"
+﻿SettingsTitle = "Nastavení"
 DarkModeLabel = "Tmavý režim"
 AppTitle = "Prohlížeč choreografie"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Fialová"
 ColorRed = "Červená"
 ColorTeal = "Tyrkysová"
 ColorYellow = "Žlutá"
+MainOpenImageTooltip = "Otevřít Podlaha SVG"
