--- a/crates/choreo_i18n/assets/i18n/da.toml
+++ b/crates/choreo_i18n/assets/i18n/da.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Indstillinger"
+﻿SettingsTitle = "Indstillinger"
 DarkModeLabel = "Mørk tilstand"
 AppTitle = "Koreografiviser"
 ChoreographyAuthorPlaceholder = "Forfatter"
@@ -88,3 +88,4 @@ ColorPurple = "Lilla"
 ColorRed = "Rød"
 ColorTeal = "Turkis"
 ColorYellow = "Gul"
+MainOpenImageTooltip = "Åbn Gulv SVG"
