--- a/crates/choreo_i18n/assets/i18n/de.toml
+++ b/crates/choreo_i18n/assets/i18n/de.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Einstellungen"
+﻿SettingsTitle = "Einstellungen"
 DarkModeLabel = "Dunkelmodus"
 AppTitle = "Choreographie Viewer"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Violett"
 ColorRed = "Rot"
 ColorTeal = "Türkis"
 ColorYellow = "Gelb"
+MainOpenImageTooltip = "Öffnen Boden SVG"
