--- a/crates/choreo_i18n/assets/i18n/el.toml
+++ b/crates/choreo_i18n/assets/i18n/el.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Ρυθμίσεις"
+﻿SettingsTitle = "Ρυθμίσεις"
 DarkModeLabel = "Σκοτεινή λειτουργία"
 AppTitle = "Προβολέας χορογραφίας"
 ChoreographyAuthorPlaceholder = "Συγγραφέας"
@@ -88,3 +88,4 @@ ColorPurple = "Μωβ"
 ColorRed = "Κόκκινο"
 ColorTeal = "Τιρκουάζ"
 ColorYellow = "Κίτρινο"
+MainOpenImageTooltip = "Άνοιγμα Δάπεδο SVG"
