--- a/crates/choreo_i18n/assets/i18n/en.toml
+++ b/crates/choreo_i18n/assets/i18n/en.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Settings"
+﻿SettingsTitle = "Settings"
 DarkModeLabel = "Dark mode"
 AppTitle = "Choreography Viewer"
 ChoreographyAuthorPlaceholder = "Author"
@@ -60,7 +60,8 @@ ScenesAddAfter = "Add after"
 ScenesOpen = "Open"
 ScenesSave = "Save"
 MainToggleNavTooltip = "Toggle navigation"
-MainOpenSettingsTooltip = "Choreography settings"
+
+MainOpenImageTooltip = "Open floor SVG"
 MainOpenFloorPlanTooltip = "Open floor plan"
 MainOpenAudioTooltip = "Open audio file"
 CommonCancel = "Cancel"
