--- a/crates/choreo_i18n/assets/i18n/es.toml
+++ b/crates/choreo_i18n/assets/i18n/es.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Configuración"
+﻿SettingsTitle = "Configuración"
 DarkModeLabel = "Modo oscuro"
 AppTitle = "Visor de coreografías"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Morado"
 ColorRed = "Rojo"
 ColorTeal = "Verde azulado"
 ColorYellow = "Amarillo"
+MainOpenImageTooltip = "Abrir Suelo SVG"
