--- a/crates/choreo_i18n/assets/i18n/et.toml
+++ b/crates/choreo_i18n/assets/i18n/et.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Seaded"
+﻿SettingsTitle = "Seaded"
 DarkModeLabel = "Tume režiim"
 AppTitle = "Koreograafia vaatur"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Lilla"
 ColorRed = "Punane"
 ColorTeal = "Türkiis"
 ColorYellow = "Kollane"
+MainOpenImageTooltip = "Ava Põrand SVG"
