--- a/crates/choreo_i18n/assets/i18n/fi.toml
+++ b/crates/choreo_i18n/assets/i18n/fi.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Asetukset"
+﻿SettingsTitle = "Asetukset"
 DarkModeLabel = "Tumma tila"
 AppTitle = "Koreografian katseluohjelma"
 ChoreographyAuthorPlaceholder = "Tekijä"
@@ -88,3 +88,4 @@ ColorPurple = "Violetti"
 ColorRed = "Punainen"
 ColorTeal = "Turkoosi"
 ColorYellow = "Keltainen"
+MainOpenImageTooltip = "Avaa Lattia SVG"
