--- a/crates/choreo_i18n/assets/i18n/fil.toml
+++ b/crates/choreo_i18n/assets/i18n/fil.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Mga Setting"
+﻿SettingsTitle = "Mga Setting"
 DarkModeLabel = "Madilim na mode"
 AppTitle = "Tagatingin ng koreograpiya"
 ChoreographyAuthorPlaceholder = "May-akda"
@@ -88,3 +88,4 @@ ColorPurple = "Lila"
 ColorRed = "Pula"
 ColorTeal = "Turkesa"
 ColorYellow = "Dilaw"
+MainOpenImageTooltip = "Buksan Sahig SVG"
