--- a/crates/choreo_i18n/assets/i18n/fo.toml
+++ b/crates/choreo_i18n/assets/i18n/fo.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Innstillingar"
+﻿SettingsTitle = "Innstillingar"
 DarkModeLabel = "Myrkt støði"
 AppTitle = "Koreografi-vísari"
 ChoreographyAuthorPlaceholder = "Høvundur"
@@ -88,3 +88,4 @@ ColorPurple = "Lilla"
 ColorRed = "Reytt"
 ColorTeal = "Turkis"
 ColorYellow = "Gult"
+MainOpenImageTooltip = "Opna Gólv SVG"
