--- a/crates/choreo_i18n/assets/i18n/fr.toml
+++ b/crates/choreo_i18n/assets/i18n/fr.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Paramètres"
+﻿SettingsTitle = "Paramètres"
 DarkModeLabel = "Mode sombre"
 AppTitle = "Visionneuse de chorégraphie"
 ChoreographyAuthorPlaceholder = "Auteur"
@@ -88,3 +88,4 @@ ColorPurple = "Violet"
 ColorRed = "Rouge"
 ColorTeal = "Turquoise"
 ColorYellow = "Jaune"
+MainOpenImageTooltip = "Ouvrir Sol SVG"
