--- a/crates/choreo_i18n/assets/i18n/ga.toml
+++ b/crates/choreo_i18n/assets/i18n/ga.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Socruithe"
+﻿SettingsTitle = "Socruithe"
 DarkModeLabel = "Mód dorcha"
 AppTitle = "Breathnóir cóiréagrafaíochta"
 ChoreographyAuthorPlaceholder = "Údar"
@@ -88,3 +88,4 @@ ColorPurple = "Corcra"
 ColorRed = "Dearg"
 ColorTeal = "Turcaid"
 ColorYellow = "Buí"
+MainOpenImageTooltip = "Oscail Urlár SVG"
