--- a/crates/choreo_i18n/assets/i18n/hi.toml
+++ b/crates/choreo_i18n/assets/i18n/hi.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "सेटिंग्स"
+﻿SettingsTitle = "सेटिंग्स"
 DarkModeLabel = "डार्क मोड"
 AppTitle = "कोरियोग्राफी व्यूअर"
 ChoreographyAuthorPlaceholder = "लेखक"
@@ -88,3 +88,4 @@ ColorPurple = "बैंगनी"
 ColorRed = "लाल"
 ColorTeal = "टील"
 ColorYellow = "पीला"
+MainOpenImageTooltip = "खोलें फर्श SVG"
