--- a/crates/choreo_i18n/assets/i18n/hr.toml
+++ b/crates/choreo_i18n/assets/i18n/hr.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Postavke"
+﻿SettingsTitle = "Postavke"
 DarkModeLabel = "Tamni način"
 AppTitle = "Preglednik koreografije"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Ljubičasta"
 ColorRed = "Crvena"
 ColorTeal = "Tirkizna"
 ColorYellow = "Žuta"
+MainOpenImageTooltip = "Otvori Pod SVG"
