--- a/crates/choreo_i18n/assets/i18n/hu.toml
+++ b/crates/choreo_i18n/assets/i18n/hu.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Beállítások"
+﻿SettingsTitle = "Beállítások"
 DarkModeLabel = "Sötét mód"
 AppTitle = "Koreográfia megjelenítő"
 ChoreographyAuthorPlaceholder = "Szerző"
@@ -88,3 +88,4 @@ ColorPurple = "Lila"
 ColorRed = "Piros"
 ColorTeal = "Türkiz"
 ColorYellow = "Sárga"
+MainOpenImageTooltip = "Megnyitás Padló SVG"
