--- a/crates/choreo_i18n/assets/i18n/hy.toml
+++ b/crates/choreo_i18n/assets/i18n/hy.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Կարգավորումներ"
+﻿SettingsTitle = "Կարգավորումներ"
 DarkModeLabel = "Մութ ռեժիմ"
 AppTitle = "Քորեոգրաֆիայի դիտիչ"
 ChoreographyAuthorPlaceholder = "Հեղինակ"
@@ -88,3 +88,4 @@ ColorPurple = "Մանուշակագույն"
 ColorRed = "Կարմիր"
 ColorTeal = "Թուրքիզ"
 ColorYellow = "Դեղին"
+MainOpenImageTooltip = "Բացել Հատակ SVG"
