--- a/crates/choreo_i18n/assets/i18n/is.toml
+++ b/crates/choreo_i18n/assets/i18n/is.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Stillingar"
+﻿SettingsTitle = "Stillingar"
 DarkModeLabel = "Dökkt þema"
 AppTitle = "Kóreógrafíu skoðari"
 ChoreographyAuthorPlaceholder = "Höfundur"
@@ -88,3 +88,4 @@ ColorPurple = "Fjólublár"
 ColorRed = "Rauður"
 ColorTeal = "Túrkís"
 ColorYellow = "Gulur"
+MainOpenImageTooltip = "Opna Gólf SVG"
