--- a/crates/choreo_i18n/assets/i18n/it.toml
+++ b/crates/choreo_i18n/assets/i18n/it.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Impostazioni"
+﻿SettingsTitle = "Impostazioni"
 DarkModeLabel = "Modalità scura"
 AppTitle = "Visualizzatore di coreografia"
 ChoreographyAuthorPlaceholder = "Autore"
@@ -88,3 +88,4 @@ ColorPurple = "Viola"
 ColorRed = "Rosso"
 ColorTeal = "Turchese"
 ColorYellow = "Giallo"
+MainOpenImageTooltip = "Apri Pavimento SVG"
