--- a/crates/choreo_i18n/assets/i18n/ka.toml
+++ b/crates/choreo_i18n/assets/i18n/ka.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "პარამეტრები"
+﻿SettingsTitle = "პარამეტრები"
 DarkModeLabel = "ბნელი რეჟიმი"
 AppTitle = "ქორეოგრაფიის მაყურებელი"
 ChoreographyAuthorPlaceholder = "ავტორი"
@@ -88,3 +88,4 @@ ColorPurple = "იასამნისფერი"
 ColorRed = "წითელი"
 ColorTeal = "თურქიზი"
 ColorYellow = "ყვითელი"
+MainOpenImageTooltip = "გახსნა იატაკი SVG"
