--- a/crates/choreo_i18n/assets/i18n/ko.toml
+++ b/crates/choreo_i18n/assets/i18n/ko.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "설정"
+﻿SettingsTitle = "설정"
 DarkModeLabel = "다크 모드"
 AppTitle = "안무 뷰어"
 ChoreographyAuthorPlaceholder = "작성자"
@@ -88,3 +88,4 @@ ColorPurple = "보라"
 ColorRed = "빨강"
 ColorTeal = "틸"
 ColorYellow = "노랑"
+MainOpenImageTooltip = "바닥 SVG 열기"
