--- a/crates/choreo_i18n/assets/i18n/lb.toml
+++ b/crates/choreo_i18n/assets/i18n/lb.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Astellungen"
+﻿SettingsTitle = "Astellungen"
 DarkModeLabel = "Däischtere Modus"
 AppTitle = "Choreografie-Viewer"
 ChoreographyAuthorPlaceholder = "Auteur"
@@ -88,3 +88,4 @@ ColorPurple = "Violett"
 ColorRed = "Rout"
 ColorTeal = "Türkis"
 ColorYellow = "Giel"
+MainOpenImageTooltip = "Opmaachen Buedem SVG"
