--- a/crates/choreo_i18n/assets/i18n/lt.toml
+++ b/crates/choreo_i18n/assets/i18n/lt.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Nustatymai"
+﻿SettingsTitle = "Nustatymai"
 DarkModeLabel = "Tamsus režimas"
 AppTitle = "Choreografijos peržiūra"
 ChoreographyAuthorPlaceholder = "Autorius"
@@ -88,3 +88,4 @@ ColorPurple = "Violetinė"
 ColorRed = "Raudona"
 ColorTeal = "Turkio"
 ColorYellow = "Geltona"
+MainOpenImageTooltip = "Atidaryti Grindys SVG"
