--- a/crates/choreo_i18n/assets/i18n/lv.toml
+++ b/crates/choreo_i18n/assets/i18n/lv.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Iestatījumi"
+﻿SettingsTitle = "Iestatījumi"
 DarkModeLabel = "Tumšais režīms"
 AppTitle = "Horeogrāfijas skatītājs"
 ChoreographyAuthorPlaceholder = "Autors"
@@ -88,3 +88,4 @@ ColorPurple = "Violeta"
 ColorRed = "Sarkana"
 ColorTeal = "Tirkīza"
 ColorYellow = "Dzeltena"
+MainOpenImageTooltip = "Atvērt Grīda SVG"
