--- a/crates/choreo_i18n/assets/i18n/mk.toml
+++ b/crates/choreo_i18n/assets/i18n/mk.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Поставки"
+﻿SettingsTitle = "Поставки"
 DarkModeLabel = "Темен режим"
 AppTitle = "Прегледувач на кореографија"
 ChoreographyAuthorPlaceholder = "Автор"
@@ -88,3 +88,4 @@ ColorPurple = "Виолетова"
 ColorRed = "Црвена"
 ColorTeal = "Тиркизна"
 ColorYellow = "Жолта"
+MainOpenImageTooltip = "Отвори Под SVG"
