--- a/crates/choreo_i18n/assets/i18n/mn.toml
+++ b/crates/choreo_i18n/assets/i18n/mn.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Тохиргоо"
+﻿SettingsTitle = "Тохиргоо"
 DarkModeLabel = "Бараан горим"
 AppTitle = "Бүжгийн найруулга харах"
 ChoreographyAuthorPlaceholder = "Зохиогч"
@@ -88,3 +88,4 @@ ColorPurple = "Нил ягаан"
 ColorRed = "Улаан"
 ColorTeal = "Туркойз"
 ColorYellow = "Шар"
+MainOpenImageTooltip = "Нээх Шал SVG"
