--- a/crates/choreo_i18n/assets/i18n/mt.toml
+++ b/crates/choreo_i18n/assets/i18n/mt.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Impostazzjonijiet"
+﻿SettingsTitle = "Impostazzjonijiet"
 DarkModeLabel = "Modalità skura"
 AppTitle = "Werrej tal-koreografija"
 ChoreographyAuthorPlaceholder = "Awtur"
@@ -88,3 +88,4 @@ ColorPurple = "Vjola"
 ColorRed = "Aħmar"
 ColorTeal = "Tirkis"
 ColorYellow = "Isfar"
+MainOpenImageTooltip = "Iftaħ Art SVG"
