--- a/crates/choreo_i18n/assets/i18n/nl.toml
+++ b/crates/choreo_i18n/assets/i18n/nl.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Instellingen"
+﻿SettingsTitle = "Instellingen"
 DarkModeLabel = "Donkere modus"
 AppTitle = "Choreografieviewer"
 ChoreographyAuthorPlaceholder = "Auteur"
@@ -88,3 +88,4 @@ ColorPurple = "Paars"
 ColorRed = "Rood"
 ColorTeal = "Turkoois"
 ColorYellow = "Geel"
+MainOpenImageTooltip = "Openen Vloer SVG"
