--- a/crates/choreo_i18n/assets/i18n/no.toml
+++ b/crates/choreo_i18n/assets/i18n/no.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Innstillinger"
+﻿SettingsTitle = "Innstillinger"
 DarkModeLabel = "Mørk modus"
 AppTitle = "Koreografiviser"
 ChoreographyAuthorPlaceholder = "Forfatter"
@@ -88,3 +88,4 @@ ColorPurple = "Lilla"
 ColorRed = "Rød"
 ColorTeal = "Turkis"
 ColorYellow = "Gul"
+MainOpenImageTooltip = "Åpne Gulv SVG"
