--- a/crates/choreo_i18n/assets/i18n/pl.toml
+++ b/crates/choreo_i18n/assets/i18n/pl.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Ustawienia"
+﻿SettingsTitle = "Ustawienia"
 DarkModeLabel = "Tryb ciemny"
 AppTitle = "Przeglądarka choreografii"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Fioletowy"
 ColorRed = "Czerwony"
 ColorTeal = "Turkusowy"
 ColorYellow = "Żółty"
+MainOpenImageTooltip = "Otwórz Podłoga SVG"
