--- a/crates/choreo_i18n/assets/i18n/pt.toml
+++ b/crates/choreo_i18n/assets/i18n/pt.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Definições"
+﻿SettingsTitle = "Definições"
 DarkModeLabel = "Modo escuro"
 AppTitle = "Visualizador de coreografia"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Roxo"
 ColorRed = "Vermelho"
 ColorTeal = "Turquesa"
 ColorYellow = "Amarelo"
+MainOpenImageTooltip = "Abrir Piso SVG"
