--- a/crates/choreo_i18n/assets/i18n/ro.toml
+++ b/crates/choreo_i18n/assets/i18n/ro.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Setări"
+﻿SettingsTitle = "Setări"
 DarkModeLabel = "Mod întunecat"
 AppTitle = "Vizualizator de coregrafie"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Mov"
 ColorRed = "Roșu"
 ColorTeal = "Turcoaz"
 ColorYellow = "Galben"
+MainOpenImageTooltip = "Deschide Podea SVG"
