--- a/crates/choreo_i18n/assets/i18n/ru.toml
+++ b/crates/choreo_i18n/assets/i18n/ru.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Настройки"
+﻿SettingsTitle = "Настройки"
 DarkModeLabel = "Темный режим"
 AppTitle = "Просмотр хореографии"
 ChoreographyAuthorPlaceholder = "Автор"
@@ -88,3 +88,4 @@ ColorPurple = "Фиолетовый"
 ColorRed = "Красный"
 ColorTeal = "Бирюзовый"
 ColorYellow = "Жёлтый"
+MainOpenImageTooltip = "Открыть Пол SVG"
