--- a/crates/choreo_i18n/assets/i18n/sk.toml
+++ b/crates/choreo_i18n/assets/i18n/sk.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Nastavenia"
+﻿SettingsTitle = "Nastavenia"
 DarkModeLabel = "Tmavý režim"
 AppTitle = "Prehliadač choreografie"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Fialová"
 ColorRed = "Červená"
 ColorTeal = "Tyrkysová"
 ColorYellow = "Žltá"
+MainOpenImageTooltip = "Otvoriť Podlaha SVG"
