--- a/crates/choreo_i18n/assets/i18n/sl.toml
+++ b/crates/choreo_i18n/assets/i18n/sl.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Nastavitve"
+﻿SettingsTitle = "Nastavitve"
 DarkModeLabel = "Temni način"
 AppTitle = "Pregledovalnik koreografije"
 ChoreographyAuthorPlaceholder = "Avtor"
@@ -88,3 +88,4 @@ ColorPurple = "Vijolična"
 ColorRed = "Rdeča"
 ColorTeal = "Turkizna"
 ColorYellow = "Rumena"
+MainOpenImageTooltip = "Odpri Tla SVG"
