--- a/crates/choreo_i18n/assets/i18n/sq.toml
+++ b/crates/choreo_i18n/assets/i18n/sq.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Cilësimet"
+﻿SettingsTitle = "Cilësimet"
 DarkModeLabel = "Modaliteti i errët"
 AppTitle = "Shikues i koreografisë"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Vjollcë"
 ColorRed = "E kuqe"
 ColorTeal = "Turkiz"
 ColorYellow = "E verdhë"
+MainOpenImageTooltip = "Hap Dysheme SVG"
