--- a/crates/choreo_i18n/assets/i18n/sr.toml
+++ b/crates/choreo_i18n/assets/i18n/sr.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Podešavanja"
+﻿SettingsTitle = "Podešavanja"
 DarkModeLabel = "Tamni režim"
 AppTitle = "Prikaz koreografije"
 ChoreographyAuthorPlaceholder = "Autor"
@@ -88,3 +88,4 @@ ColorPurple = "Љубичаста"
 ColorRed = "Црвена"
 ColorTeal = "Тиркизна"
 ColorYellow = "Жута"
+MainOpenImageTooltip = "Отвори Pod SVG"
