--- a/crates/choreo_i18n/assets/i18n/sv.toml
+++ b/crates/choreo_i18n/assets/i18n/sv.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Inställningar"
+﻿SettingsTitle = "Inställningar"
 DarkModeLabel = "Mörkt läge"
 AppTitle = "Koreografivisare"
 ChoreographyAuthorPlaceholder = "Författare"
@@ -88,3 +88,4 @@ ColorPurple = "Lila"
 ColorRed = "Röd"
 ColorTeal = "Turkos"
 ColorYellow = "Gul"
+MainOpenImageTooltip = "Öppna Golv SVG"
