--- a/crates/choreo_i18n/assets/i18n/tr.toml
+++ b/crates/choreo_i18n/assets/i18n/tr.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Ayarlar"
+﻿SettingsTitle = "Ayarlar"
 DarkModeLabel = "Karanlık mod"
 AppTitle = "Koreografi Görüntüleyici"
 ChoreographyAuthorPlaceholder = "Yazar"
@@ -88,3 +88,4 @@ ColorPurple = "Mor"
 ColorRed = "Kırmızı"
 ColorTeal = "Turkuaz"
 ColorYellow = "Sarı"
+MainOpenImageTooltip = "Aç Zemin SVG"
