--- a/crates/choreo_i18n/assets/i18n/uk.toml
+++ b/crates/choreo_i18n/assets/i18n/uk.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Налаштування"
+﻿SettingsTitle = "Налаштування"
 DarkModeLabel = "Темний режим"
 AppTitle = "Перегляд хореографії"
 ChoreographyAuthorPlaceholder = "Автор"
@@ -88,3 +88,4 @@ ColorPurple = "Фіолетовий"
 ColorRed = "Червоний"
 ColorTeal = "Бірюзовий"
 ColorYellow = "Жовтий"
+MainOpenImageTooltip = "Відкрити Підлога SVG"
