--- a/crates/choreo_i18n/assets/i18n/vi.toml
+++ b/crates/choreo_i18n/assets/i18n/vi.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Cài đặt"
+﻿SettingsTitle = "Cài đặt"
 DarkModeLabel = "Chế độ tối"
 AppTitle = "Trình xem biên đạo"
 ChoreographyAuthorPlaceholder = "Tác giả"
@@ -88,3 +88,4 @@ ColorPurple = "Tím"
 ColorRed = "Đỏ"
 ColorTeal = "Xanh mòng két"
 ColorYellow = "Vàng"
+MainOpenImageTooltip = "Mở Sàn SVG"
