--- a/crates/choreo_i18n/assets/i18n/zh.toml
+++ b/crates/choreo_i18n/assets/i18n/zh.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "设置"
+﻿SettingsTitle = "设置"
 DarkModeLabel = "深色模式"
 AppTitle = "舞蹈编排查看器"
 ChoreographyAuthorPlaceholder = "作者"
@@ -88,3 +88,4 @@ ColorPurple = "紫色"
 ColorRed = "红色"
 ColorTeal = "蓝绿"
 ColorYellow = "黄色"
+MainOpenImageTooltip = "地板 SVG 打开"
