--- a/crates/choreo_i18n/assets/i18n/ja.toml
+++ b/crates/choreo_i18n/assets/i18n/ja.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "設定"
+﻿SettingsTitle = "設定"
 DarkModeLabel = "ダークモード"
 AppTitle = "振付ビューアー"
 ChoreographyAuthorPlaceholder = "作者"
@@ -88,3 +88,4 @@ ColorPurple = "紫"
 ColorRed = "赤"
 ColorTeal = "ティール"
 ColorYellow = "黄色"
+MainOpenImageTooltip = "床 SVG 開く"
