--- a/crates/choreo_i18n/assets/i18n/rm.toml
+++ b/crates/choreo_i18n/assets/i18n/rm.toml
@@ -1,4 +1,4 @@
-SettingsTitle = "Preferenzas"
+﻿SettingsTitle = "Preferenzas"
 DarkModeLabel = "Modus stgir"
 AppTitle = "Visur da coreografias"
 ChoreographyAuthorPlaceholder = "Autur"
@@ -88,3 +88,4 @@ ColorPurple = "Violett"
 ColorRed = "Cotschen"
 ColorTeal = "Turkis"
 ColorYellow = "Mellen"
+MainOpenImageTooltip = "Avrir Palantschieu SVG"
