Localize main settings tooltip and normalize i18n TOML spacing

--- a/crates/choreo_i18n/assets/i18n/ar.toml
+++ b/crates/choreo_i18n/assets/i18n/ar.toml
@@ -89,3 +89,4 @@ ColorRed = "أحمر"
 ColorTeal = "أخضر مزرق"
 ColorYellow = "أصفر"
 MainOpenImageTooltip = "فتح الأرضية SVG"
+MainOpenSettingsTooltip = "تصميم الرقصات الإعدادات"
