--- a/crates/choreo_i18n/assets/i18n/az.toml
+++ b/crates/choreo_i18n/assets/i18n/az.toml
@@ -89,3 +89,4 @@ ColorRed = "Qırmızı"
 ColorTeal = "Firuzəyi"
 ColorYellow = "Sarı"
 MainOpenImageTooltip = "Aç Döşəmə SVG"
+MainOpenSettingsTooltip = "Xoreoqrafiya Ayarlar"
