--- a/crates/choreo_i18n/assets/i18n/be.toml
+++ b/crates/choreo_i18n/assets/i18n/be.toml
@@ -89,3 +89,4 @@ ColorRed = "Чырвоны"
 ColorTeal = "Бірюзовы"
 ColorYellow = "Жоўты"
 MainOpenImageTooltip = "Адкрыць Падлога SVG"
+MainOpenSettingsTooltip = "Харэаграфія Налады"
