--- a/crates/choreo_i18n/assets/i18n/bg.toml
+++ b/crates/choreo_i18n/assets/i18n/bg.toml
@@ -89,3 +89,4 @@ ColorRed = "Червен"
 ColorTeal = "Тюркоаз"
 ColorYellow = "Жълт"
 MainOpenImageTooltip = "Отвори Под SVG"
+MainOpenSettingsTooltip = "Хореография Настройки"
