--- a/crates/choreo_i18n/assets/i18n/bn.toml
+++ b/crates/choreo_i18n/assets/i18n/bn.toml
@@ -89,3 +89,4 @@ ColorRed = "লাল"
 ColorTeal = "টিল"
 ColorYellow = "হলুদ"
 MainOpenImageTooltip = "খুলুন মেঝে SVG"
+MainOpenSettingsTooltip = "কোরিওগ্রাফি সেটিংস"
