--- a/crates/choreo_i18n/assets/i18n/bs.toml
+++ b/crates/choreo_i18n/assets/i18n/bs.toml
@@ -89,3 +89,4 @@ ColorRed = "Crvena"
 ColorTeal = "Tirkizna"
 ColorYellow = "Žuta"
 MainOpenImageTooltip = "Otvori Pod SVG"
+MainOpenSettingsTooltip = "Koreografija Postavke"
