--- a/crates/choreo_i18n/assets/i18n/ca.toml
+++ b/crates/choreo_i18n/assets/i18n/ca.toml
@@ -89,3 +89,4 @@ ColorRed = "Vermell"
 ColorTeal = "Verd turquesa"
 ColorYellow = "Groc"
 MainOpenImageTooltip = "Obre Terra SVG"
+MainOpenSettingsTooltip = "Coreografia Configuració"
