--- a/crates/choreo_i18n/assets/i18n/cs.toml
+++ b/crates/choreo_i18n/assets/i18n/cs.toml
@@ -89,3 +89,4 @@ ColorRed = "Červená"
 ColorTeal = "Tyrkysová"
 ColorYellow = "Žlutá"
 MainOpenImageTooltip = "Otevřít Podlaha SVG"
+MainOpenSettingsTooltip = "Choreografie Nastavení"
