--- a/crates/choreo_i18n/assets/i18n/da.toml
+++ b/crates/choreo_i18n/assets/i18n/da.toml
@@ -89,3 +89,4 @@ ColorRed = "Rød"
 ColorTeal = "Turkis"
 ColorYellow = "Gul"
 MainOpenImageTooltip = "Åbn Gulv SVG"
+MainOpenSettingsTooltip = "Koreografi Indstillinger"
