--- a/crates/choreo_i18n/assets/i18n/de.toml
+++ b/crates/choreo_i18n/assets/i18n/de.toml
@@ -89,3 +89,4 @@ ColorRed = "Rot"
 ColorTeal = "Türkis"
 ColorYellow = "Gelb"
 MainOpenImageTooltip = "Öffnen Boden SVG"
+MainOpenSettingsTooltip = "Choreografie Einstellungen"
