--- a/crates/choreo_i18n/assets/i18n/el.toml
+++ b/crates/choreo_i18n/assets/i18n/el.toml
@@ -89,3 +89,4 @@ ColorRed = "Κόκκινο"
 ColorTeal = "Τιρκουάζ"
 ColorYellow = "Κίτρινο"
 MainOpenImageTooltip = "Άνοιγμα Δάπεδο SVG"
+MainOpenSettingsTooltip = "Χορογραφία Ρυθμίσεις"
