--- a/crates/choreo_i18n/assets/i18n/en.toml
+++ b/crates/choreo_i18n/assets/i18n/en.toml
@@ -60,7 +60,7 @@ ScenesAddAfter = "Add after"
 ScenesOpen = "Open"
 ScenesSave = "Save"
 MainToggleNavTooltip = "Toggle navigation"
-
+MainOpenSettingsTooltip = "Choreography Settings"
 MainOpenImageTooltip = "Open floor SVG"
 MainOpenFloorPlanTooltip = "Open floor plan"
 MainOpenAudioTooltip = "Open audio file"
