--- a/crates/choreo_i18n/assets/i18n/es.toml
+++ b/crates/choreo_i18n/assets/i18n/es.toml
@@ -89,3 +89,4 @@ ColorRed = "Rojo"
 ColorTeal = "Verde azulado"
 ColorYellow = "Amarillo"
 MainOpenImageTooltip = "Abrir Suelo SVG"
+MainOpenSettingsTooltip = "Coreografía Configuración"
