--- a/crates/choreo_i18n/assets/i18n/et.toml
+++ b/crates/choreo_i18n/assets/i18n/et.toml
@@ -89,3 +89,4 @@ ColorRed = "Punane"
 ColorTeal = "Türkiis"
 ColorYellow = "Kollane"
 MainOpenImageTooltip = "Ava Põrand SVG"
+MainOpenSettingsTooltip = "Koreograafia Seaded"
