--- a/crates/choreo_i18n/assets/i18n/fi.toml
+++ b/crates/choreo_i18n/assets/i18n/fi.toml
@@ -89,3 +89,4 @@ ColorRed = "Punainen"
 ColorTeal = "Turkoosi"
 ColorYellow = "Keltainen"
 MainOpenImageTooltip = "Avaa Lattia SVG"
+MainOpenSettingsTooltip = "Koreografia Asetukset"
