--- a/crates/choreo_i18n/assets/i18n/fil.toml
+++ b/crates/choreo_i18n/assets/i18n/fil.toml
@@ -89,3 +89,4 @@ ColorRed = "Pula"
 ColorTeal = "Turkesa"
 ColorYellow = "Dilaw"
 MainOpenImageTooltip = "Buksan Sahig SVG"
+MainOpenSettingsTooltip = "Koreograpiya Mga Setting"
