--- a/crates/choreo_i18n/assets/i18n/fo.toml
+++ b/crates/choreo_i18n/assets/i18n/fo.toml
@@ -89,3 +89,4 @@ ColorRed = "Reytt"
 ColorTeal = "Turkis"
 ColorYellow = "Gult"
 MainOpenImageTooltip = "Opna Gólv SVG"
+MainOpenSettingsTooltip = "Koreografi Innstillingar"
