--- a/crates/choreo_i18n/assets/i18n/fr.toml
+++ b/crates/choreo_i18n/assets/i18n/fr.toml
@@ -89,3 +89,4 @@ ColorRed = "Rouge"
 ColorTeal = "Turquoise"
 ColorYellow = "Jaune"
 MainOpenImageTooltip = "Ouvrir Sol SVG"
+MainOpenSettingsTooltip = "Chorégraphie Paramètres"
