--- a/crates/choreo_i18n/assets/i18n/ga.toml
+++ b/crates/choreo_i18n/assets/i18n/ga.toml
@@ -89,3 +89,4 @@ ColorRed = "Dearg"
 ColorTeal = "Turcaid"
 ColorYellow = "Buí"
 MainOpenImageTooltip = "Oscail Urlár SVG"
+MainOpenSettingsTooltip = "Cóiréagrafaíocht Socruithe"
