--- a/crates/choreo_i18n/assets/i18n/hi.toml
+++ b/crates/choreo_i18n/assets/i18n/hi.toml
@@ -89,3 +89,4 @@ ColorRed = "लाल"
 ColorTeal = "टील"
 ColorYellow = "पीला"
 MainOpenImageTooltip = "खोलें फर्श SVG"
+MainOpenSettingsTooltip = "कोरियोग्राफी सेटिंग्स"
