--- a/crates/choreo_i18n/assets/i18n/hu.toml
+++ b/crates/choreo_i18n/assets/i18n/hu.toml
@@ -89,3 +89,4 @@ ColorRed = "Piros"
 ColorTeal = "Türkiz"
 ColorYellow = "Sárga"
 MainOpenImageTooltip = "Megnyitás Padló SVG"
+MainOpenSettingsTooltip = "Koreográfia Beállítások"
