--- a/crates/choreo_i18n/assets/i18n/hy.toml
+++ b/crates/choreo_i18n/assets/i18n/hy.toml
@@ -89,3 +89,4 @@ ColorRed = "Կարմիր"
 ColorTeal = "Թուրքիզ"
 ColorYellow = "Դեղին"
 MainOpenImageTooltip = "Բացել Հատակ SVG"
+MainOpenSettingsTooltip = "Քորեոգրաֆիա Կարգավորումներ"
