--- a/crates/choreo_i18n/assets/i18n/is.toml
+++ b/crates/choreo_i18n/assets/i18n/is.toml
@@ -89,3 +89,4 @@ ColorRed = "Rauður"
 ColorTeal = "Túrkís"
 ColorYellow = "Gulur"
 MainOpenImageTooltip = "Opna Gólf SVG"
+MainOpenSettingsTooltip = "Kóreógrafía Stillingar"
