--- a/crates/choreo_i18n/assets/i18n/it.toml
+++ b/crates/choreo_i18n/assets/i18n/it.toml
@@ -89,3 +89,4 @@ ColorRed = "Rosso"
 ColorTeal = "Turchese"
 ColorYellow = "Giallo"
 MainOpenImageTooltip = "Apri Pavimento SVG"
+MainOpenSettingsTooltip = "Coreografia Impostazioni"
