--- a/crates/choreo_i18n/assets/i18n/ka.toml
+++ b/crates/choreo_i18n/assets/i18n/ka.toml
@@ -89,3 +89,4 @@ ColorRed = "წითელი"
 ColorTeal = "თურქიზი"
 ColorYellow = "ყვითელი"
 MainOpenImageTooltip = "გახსნა იატაკი SVG"
+MainOpenSettingsTooltip = "ქორეოგრაფია პარამეტრები"
