--- a/crates/choreo_i18n/assets/i18n/lb.toml
+++ b/crates/choreo_i18n/assets/i18n/lb.toml
@@ -89,3 +89,4 @@ ColorRed = "Rout"
 ColorTeal = "Türkis"
 ColorYellow = "Giel"
 MainOpenImageTooltip = "Opmaachen Buedem SVG"
+MainOpenSettingsTooltip = "Choreografie Astellungen"
