--- a/crates/choreo_i18n/assets/i18n/lt.toml
+++ b/crates/choreo_i18n/assets/i18n/lt.toml
@@ -89,3 +89,4 @@ ColorRed = "Raudona"
 ColorTeal = "Turkio"
 ColorYellow = "Geltona"
 MainOpenImageTooltip = "Atidaryti Grindys SVG"
+MainOpenSettingsTooltip = "Choreografija Nustatymai"
