--- a/crates/choreo_i18n/assets/i18n/lv.toml
+++ b/crates/choreo_i18n/assets/i18n/lv.toml
@@ -89,3 +89,4 @@ ColorRed = "Sarkana"
 ColorTeal = "Tirkīza"
 ColorYellow = "Dzeltena"
 MainOpenImageTooltip = "Atvērt Grīda SVG"
+MainOpenSettingsTooltip = "Horeogrāfija Iestatījumi"
