--- a/crates/choreo_i18n/assets/i18n/mk.toml
+++ b/crates/choreo_i18n/assets/i18n/mk.toml
@@ -89,3 +89,4 @@ ColorRed = "Црвена"
 ColorTeal = "Тиркизна"
 ColorYellow = "Жолта"
 MainOpenImageTooltip = "Отвори Под SVG"
+MainOpenSettingsTooltip = "Кореографија Поставки"
