--- a/crates/choreo_i18n/assets/i18n/mn.toml
+++ b/crates/choreo_i18n/assets/i18n/mn.toml
@@ -89,3 +89,4 @@ ColorRed = "Улаан"
 ColorTeal = "Туркойз"
 ColorYellow = "Шар"
 MainOpenImageTooltip = "Нээх Шал SVG"
+MainOpenSettingsTooltip = "Бүжгийн найруулга Тохиргоо"
