--- a/crates/choreo_i18n/assets/i18n/mt.toml
+++ b/crates/choreo_i18n/assets/i18n/mt.toml
@@ -89,3 +89,4 @@ ColorRed = "Aħmar"
 ColorTeal = "Tirkis"
 ColorYellow = "Isfar"
 MainOpenImageTooltip = "Iftaħ Art SVG"
+MainOpenSettingsTooltip = "Koreografija Impostazzjonijiet"
