--- a/crates/choreo_i18n/assets/i18n/nl.toml
+++ b/crates/choreo_i18n/assets/i18n/nl.toml
@@ -89,3 +89,4 @@ ColorRed = "Rood"
 ColorTeal = "Turkoois"
 ColorYellow = "Geel"
 MainOpenImageTooltip = "Openen Vloer SVG"
+MainOpenSettingsTooltip = "Choreografie Instellingen"
