--- a/crates/choreo_i18n/assets/i18n/pl.toml
+++ b/crates/choreo_i18n/assets/i18n/pl.toml
@@ -89,3 +89,4 @@ ColorRed = "Czerwony"
 ColorTeal = "Turkusowy"
 ColorYellow = "Żółty"
 MainOpenImageTooltip = "Otwórz Podłoga SVG"
+MainOpenSettingsTooltip = "Choreografia Ustawienia"
