--- a/crates/choreo_i18n/assets/i18n/pt.toml
+++ b/crates/choreo_i18n/assets/i18n/pt.toml
@@ -89,3 +89,4 @@ ColorRed = "Vermelho"
 ColorTeal = "Turquesa"
 ColorYellow = "Amarelo"
 MainOpenImageTooltip = "Abrir Piso SVG"
+MainOpenSettingsTooltip = "Coreografia Definições"
