--- a/crates/choreo_i18n/assets/i18n/rm.toml
+++ b/crates/choreo_i18n/assets/i18n/rm.toml
@@ -89,3 +89,4 @@ ColorRed = "Cotschen"
 ColorTeal = "Turkis"
 ColorYellow = "Mellen"
 MainOpenImageTooltip = "Avrir Palantschieu SVG"
+MainOpenSettingsTooltip = "Coreografia Preferenzas"
