--- a/crates/choreo_i18n/assets/i18n/ro.toml
+++ b/crates/choreo_i18n/assets/i18n/ro.toml
@@ -89,3 +89,4 @@ ColorRed = "Roșu"
 ColorTeal = "Turcoaz"
 ColorYellow = "Galben"
 MainOpenImageTooltip = "Deschide Podea SVG"
+MainOpenSettingsTooltip = "Coregrafie Setări"
