--- a/crates/choreo_i18n/assets/i18n/ru.toml
+++ b/crates/choreo_i18n/assets/i18n/ru.toml
@@ -89,3 +89,4 @@ ColorRed = "Красный"
 ColorTeal = "Бирюзовый"
 ColorYellow = "Жёлтый"
 MainOpenImageTooltip = "Открыть Пол SVG"
+MainOpenSettingsTooltip = "Хореография Настройки"
