--- a/crates/choreo_i18n/assets/i18n/sk.toml
+++ b/crates/choreo_i18n/assets/i18n/sk.toml
@@ -89,3 +89,4 @@ ColorRed = "Červená"
 ColorTeal = "Tyrkysová"
 ColorYellow = "Žltá"
 MainOpenImageTooltip = "Otvoriť Podlaha SVG"
+MainOpenSettingsTooltip = "Choreografia Nastavenia"
