--- a/crates/choreo_i18n/assets/i18n/sl.toml
+++ b/crates/choreo_i18n/assets/i18n/sl.toml
@@ -89,3 +89,4 @@ ColorRed = "Rdeča"
 ColorTeal = "Turkizna"
 ColorYellow = "Rumena"
 MainOpenImageTooltip = "Odpri Tla SVG"
+MainOpenSettingsTooltip = "Koreografija Nastavitve"
