--- a/crates/choreo_i18n/assets/i18n/sq.toml
+++ b/crates/choreo_i18n/assets/i18n/sq.toml
@@ -89,3 +89,4 @@ ColorRed = "E kuqe"
 ColorTeal = "Turkiz"
 ColorYellow = "E verdhë"
 MainOpenImageTooltip = "Hap Dysheme SVG"
+MainOpenSettingsTooltip = "Koreografi Cilësimet"
