--- a/crates/choreo_i18n/assets/i18n/sr.toml
+++ b/crates/choreo_i18n/assets/i18n/sr.toml
@@ -89,3 +89,4 @@ ColorRed = "Црвена"
 ColorTeal = "Тиркизна"
 ColorYellow = "Жута"
 MainOpenImageTooltip = "Отвори Pod SVG"
+MainOpenSettingsTooltip = "Koreografija Podešavanja"
