--- a/crates/choreo_i18n/assets/i18n/sv.toml
+++ b/crates/choreo_i18n/assets/i18n/sv.toml
@@ -89,3 +89,4 @@ ColorRed = "Röd"
 ColorTeal = "Turkos"
 ColorYellow = "Gul"
 MainOpenImageTooltip = "Öppna Golv SVG"
+MainOpenSettingsTooltip = "Koreografi Inställningar"
