--- a/crates/choreo_i18n/assets/i18n/tr.toml
+++ b/crates/choreo_i18n/assets/i18n/tr.toml
@@ -89,3 +89,4 @@ ColorRed = "Kırmızı"
 ColorTeal = "Turkuaz"
 ColorYellow = "Sarı"
 MainOpenImageTooltip = "Aç Zemin SVG"
+MainOpenSettingsTooltip = "Koreografi Ayarlar"
