--- a/crates/choreo_i18n/assets/i18n/uk.toml
+++ b/crates/choreo_i18n/assets/i18n/uk.toml
@@ -89,3 +89,4 @@ ColorRed = "Червоний"
 ColorTeal = "Бірюзовий"
 ColorYellow = "Жовтий"
 MainOpenImageTooltip = "Відкрити Підлога SVG"
+MainOpenSettingsTooltip = "Хореографія Налаштування"
