--- a/crates/choreo_i18n/assets/i18n/vi.toml
+++ b/crates/choreo_i18n/assets/i18n/vi.toml
@@ -89,3 +89,4 @@ ColorRed = "Đỏ"
 ColorTeal = "Xanh mòng két"
 ColorYellow = "Vàng"
 MainOpenImageTooltip = "Mở Sàn SVG"
+MainOpenSettingsTooltip = "Biên đạo Cài đặt"
