--- a/crates/choreo_i18n/assets/i18n/no.toml
+++ b/crates/choreo_i18n/assets/i18n/no.toml
@@ -89,3 +89,4 @@ ColorRed = "Rød"
 ColorTeal = "Turkis"
 ColorYellow = "Gul"
 MainOpenImageTooltip = "Åpne Gulv SVG"
+MainOpenSettingsTooltip = "Koreografi Innstillinger"
